2.0a1 (2013-10-05)
------------------

This is an alpha release of Deform v2.  Deform v2 is backwards incompatible
with Deform v1.  It requires the use of Twitter Bootstrap v3, whereas 
deform v1 did not require Bootstrap.

A demonstration site that shows Deform 2 in action exists at 
http://deform2demo.repoze.org.

Both Deform 1 and Deform 2 will be maintained going forward.  If you wish
to continue using Deform 1, because you cannot upgrade, or cannot depend on
Bootstrap 3, please pin your deform distribution requirement to
something below 2.0a1, e.g. ``deform<=1.999``.

This first alpha release is missing formal documentation updates.  Apologies, 
we needed to get a release out onto PyPI, as not having one is holding back
the development of a number of platforms and applications that depend on the 
changes in v2+.  Documentation updates will be forthcoming over the lifetime 
of future alpha/beta releases.  However, below is a list of known issues that 
need to be addressed to make a final release of Deform 2, as well as 
information about new features, and migration notes.  You may also be
able to make use of the demo site at http://deform2demo.repoze.org to divine
how things have changed, and what CSS and JavaScript resources you'll need
to include in your pages to make use of this release.

TODO

- docs
- decide how to explain form.css (include in requirements or?)
- horizontal/inline forms + structural things
- assets for templates: deform should provide a tool to resolve that?
- placeholder support for all textual inputs (and required/maxlength
  see also https://github.com/Pylons/deform/pull/116)
- display help-blocks for readonly fields?
- maybe readonly should be a property of the schema, not the widget.
- consider whether "style"/"css_class" on multi-input widgets should apply to
  a container or each element.
- audit use of e.g. string:${css_class} so we don't see unexpected class="None"
  in widget rendering output.