@@ -7,7 +7,7 @@ ${field.start_mapping()}
 <div>
   <input type="password"
          name="${name}"
-         value="${cstruct}"
+         value="${field.widget.show and cstruct or ''}"
          tal:attributes="class string: form-control ${css_class};
                          style style;"
          id="${oid}"
@@ -17,7 +17,7 @@ ${field.start_mapping()}
 <div>
   <input type="password"
          name="${name}-confirm"
-         value="${confirm}"
+         value="${field.widget.show and confirm or ''}"
          tal:attributes="class string: form-control ${css_class};
                          style style;"
          id="${oid}-confirm"
