@@ -1,5 +1,8 @@
-<input type="password" name="${name|field.name}" value="${cstruct}" 
-       tal:attributes="style style|field.widget.style;
-                      class string: form-control ${css_class|field.widget.css_class};"
-       id="${oid|field.oid}"/>
+<input 
+    type="password" 
+    name="${name|field.name}" 
+    value="${field.widget.show and cstruct or ''}" 
+    tal:attributes="style style|field.widget.style;
+                    class string: form-control ${css_class|field.widget.css_class};"
+    id="${oid|field.oid}"/>
 
